--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
 
     <i class='bx bx-menu' id="menu-icon"></i>
     <nav class="navbar">
-      
       <a href="#home" class="active"><i class="fa-solid fa-house"></i> Home</a>
       <a href="#about"><i class="fa-solid fa-circle-info"></i>  About</a>
       <a href="#Farm Management"> <i class="fa-solid fa-blog"></i>  Blogs</a>
       <a href="#Resource Library"><i class="fa-solid fa-book"></i>  Resource Library</a>
       <a href="#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
-
+      <a href="#changemode">
+        <img src="images/sun.png" id="changemode">
+      </a>
     </nav>
   </header>
 
@@ -87,7 +88,7 @@
     </div>
     </div>
   </section>
-
+  <div style="background: var(--primary-color);">
   <section class="farm" id="Farm Management">
     <h2 class="heading">Agro<span>Blogs</span></h2>
 
@@ -515,6 +516,18 @@ const mobileNumberInput = document.getElementById('mobileNumber');
       }
       v.src = "https://cdn.voiceflow.com/widget/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
   })(document, 'script');
+</script>
+<script>
+  var changemode=document.getElementById("changemode");
+  changemode.onclick= function(){
+    document.body.classList.toggle("light-theme");
+    if(document.body.classList.contains("light-theme")){
+      changemode.src="images/moon.png";
+     }
+     else{
+       changemode.src="images/sun.png";
+     }
+}
 </script>
 </body>
 
