--- a/index.html
+++ b/index.html
@@ -156,150 +156,8 @@
         </div>
     </div>    
   </div>
-
-  <div class="fcard" onclick="window.location.href='https://rodaleinstitute.org/why-organic/organic-farming-practices/crop-rotations/';">
-    <img class="agrblg" src="./images/croprota.jpg">
-    <div class="article">
-      <a href="">Blog</a>
-      <h2>Crop Rotation</h2>
-      <p>Discusses the importance of crop rotation in maintaining soil fertility, preventing pests and diseases, and improving crop yield. Delve into the importance of crop rotation in maintaining soil fertility and preventing pest and disease outbreaks. Discover various crop rotation methods, their benefits, and how they contribute to improving yield and reducing the reliance on chemical inputs in modern agricultural systems.</p>
-      <div class="day">
-        <ul>
-          <li class="date"><p class="tim">April 19, 2022</p> </li>
-           <li class="time"><p class="tim">11 minutes ago</p></li>
-          </ul>
-        </div>
-    </div>    
   </div>
-
-
-  <div class="fcard" onclick="window.location.href='https://plantic.in/learngrow/vegetable-growing-season-chart';">
-    <img class="agrblg" src="./images/seasonn.jpg">
-    <div class="article">
-      <a href="">Technique</a>
-      <h2>Seasonal Planting Guide</h2>
-      <p>Provides tips and advice on what crops to plant during different seasons, along with information on optimal planting times and growing conditions.A seasonal planting guide serves as a roadmap for gardeners, offering invaluable insights into optimal planting times and techniques tailored to specific seasons.By following such a guide, gardeners can optimize their efforts and cultivate thriving gardens year-round.</p>
-      <div class="day">
-        <ul>
-          <li class="date"><p class="tim">April 19, 2022</p> </li>
-           <li class="time"><p class="tim">11 minutes ago</p></li>
-          </ul>
-        </div>
-    </div>    
-  </div>
-
-
-  <div class="fcard" onclick="window.location.href='https://extension.psu.edu/managing-soil-health-concepts-and-practices';">
-    <img class="agrblg" src="./images/soil.jpg">
-    <div class="article">
-      <a href="">Blog</a>
-      <h2>Soil Health and Management</h2>
-      <p>Covers topics related to soil fertility, soil testing, nutrient management, and techniques for improving soil health, such as composting and cover cropping.</p>
-      <div class="day">
-        <ul>
-          <li class="date"><p class="tim">April 19, 2022</p> </li>
-           <li class="time"><p class="tim">11 minutes ago</p></li>
-          </ul>
-        </div>
-    </div>    
-  </div>
-
-
-  <div class="fcard" onclick="window.location.href='https://www.epa.gov/safepestcontrol/integrated-pest-management-ipm-principles';">
-    <img class="agrblg" src="./images/pest.jpg">
-    <div class="article">
-      <a href="">Techniques</a>
-      <h2>Integrated Pest Management</h2>
-      <p>Explains the principles of IPM and how farmers can use a combination of cultural, biological, and chemical methods to control pests while minimizing environmental impact.</p>
-      <div class="day">
-        <ul>
-          <li class="date"><p class="tim">April 19, 2022</p> </li>
-           <li class="time"><p class="tim">11 minutes ago</p></li>
-          </ul>
-        </div>
-    </div>    
-  </div>
-
-
-  <div class="fcard" onclick="window.location.href='https://eos.com/blog/agricultural-technology/#:~:text=Agricultural%20technology%2C%20also%20known%20as,%2C%20mobile%20devices%2C%20and%20software.';">
-    <img class="agrblg" src="./images/farmtech.png">
-    <div class="article">
-      <a href="">Blog</a>
-      <h2>Farming Technology</h2>
-      <p>Explore the latest advancements in agricultural technology, such as precision agriculture, drones, smart irrigation systems, and automated farm machinery.</p>
-      <div class="day">
-        <ul>
-          <li class="date"><p class="tim">April 19, 2022</p> </li>
-           <li class="time"><p class="tim">11 minutes ago</p></li>
-          </ul>
-        </div>
-    </div>    
-  </div>
-
-
-  <div class="fcard" onclick="window.location.href='https://www.britannica.com/money/agricultural-economics';">
-    <img class="agrblg" src="./images/econ.jpg">
-    <div class="article">
-      <a href="">Blog</a>
-      <h2>Farming Economics</h2>
-      <p>Discusses economic aspects of farming, including market trends, pricing strategies, financial management, and government policies affecting the agriculture sector.</p>
-      <div class="day">
-        <ul>
-          <li class="date"><p class="tim">April 19, 2022</p> </li>
-           <li class="time"><p class="tim">11 minutes ago</p></li>
-          </ul>
-        </div>
-    </div>    
-  </div>
-
-
- 
-  <div class="fcard" onclick="window.location.href= 'https://icar.org.in/sites/default/files/inline-files/livestock-management-AR-2011-12_2.pdf';">
-    <img class="agrblg" src="./images/livestocks.jpg">
-    <div class="article">
-      <a href="">Blog</a>
-      <h2>Livestock Management</h2>
-      <p>Provides guidance on raising and managing livestock, including topics such as animal health, breeding, nutrition, housing, and pasture management</p>
-      <div class="day">
-        <ul>
-      <li class="date"><p class="tim">April 19, 2022</p> </li>
-       <li class="time"><p class="tim">11 minutes ago</p></li>
-      </ul>
-      </div>
-     
-    </div>    
-  </div>
-
-
-   
-  <div class="fcard" onclick="window.location.href= 'https://nationalaglawcenter.org/overview/agritourism/';">
-    <img class="agrblg" src="./images/aritourism.png">
-    <div class="article">
-      <a href="">Blog</a>
-      <h2>Agri-Tourism</h2>
-      <p>Explore opportunities for farmers to diversify their income through agri-tourism activities such as farm tours, farm stays, pick-your-own operations, or on-farm events.</p>
-      <div class="day">
-        <ul>
-          <li class="date"><p class="tim">April 19, 2022</p> </li>
-           <li class="time"><p class="tim">11 minutes ago</p></li>
-          </ul>
-        </div>
-    </div>    
-  </div>
-
-  <div class="fcard" onclick="window.location.href='/blogs/smartfarming/smartfarming.html'">
-    <img class="agrblg" src="blogs\smartfarming\img2.png">
-    <div class="article">
-      <a href="/blogs/smartfarming/smartfarming.html">Blog</a>
-      <h2>Smart Farming</h2>
-      <p>Feeling the pressure to grow more food with less?  This blog dives into smart farming technologies and how they're revolutionizing agriculture for a more productive and sustainable future.</p>
-        <ul>
-          <li class="date"><p class="tim">May 23, 2022</p> </li>
-           <li class="time"><p class="tim">11 minutes ago</p></li>
-          </ul>
-        </div>
-    </div>    
-  </div>
+  <a class="more-blogs"href="/blogpage/index.html">...more blogs</a>  
 
 </section>
 
