--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       
       <a href="#home" class="active"><i class="fa-solid fa-house"></i> Home</a>
       <a href="#about"><i class="fa-solid fa-circle-info"></i>  About</a>
-      <a href="/blogpage/index.html" target="_self"> <i class="fa-solid fa-blog"></i>  Blogs</a>
+      <a href="#Farm Management"> <i class="fa-solid fa-blog"></i>  Blogs</a>
       <a href="#Resource Library"><i class="fa-solid fa-book"></i>  Resource Library</a>
       <a href="#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
 
@@ -92,6 +92,7 @@
 
   <section class="farm" id="Farm Management">
     <h2 class="heading">Agro<span>Blogs</span></h2>
+
     <br>
     <br>
       
@@ -155,8 +156,9 @@
         </div>
     </div>    
   </div>
+
   <div class="fcard" onclick="window.location.href='https://rodaleinstitute.org/why-organic/organic-farming-practices/crop-rotations/';">
-    <img class="agrblg" src="/images/croprota.jpg">
+    <img class="agrblg" src="./images/croprota.jpg">
     <div class="article">
       <a href="">Blog</a>
       <h2>Crop Rotation</h2>
@@ -172,7 +174,7 @@
 
 
   <div class="fcard" onclick="window.location.href='https://plantic.in/learngrow/vegetable-growing-season-chart';">
-    <img class="agrblg" src="/images/seasonn.jpg">
+    <img class="agrblg" src="./images/seasonn.jpg">
     <div class="article">
       <a href="">Technique</a>
       <h2>Seasonal Planting Guide</h2>
@@ -188,7 +190,7 @@
 
 
   <div class="fcard" onclick="window.location.href='https://extension.psu.edu/managing-soil-health-concepts-and-practices';">
-    <img class="agrblg" src="/images/soil.jpg">
+    <img class="agrblg" src="./images/soil.jpg">
     <div class="article">
       <a href="">Blog</a>
       <h2>Soil Health and Management</h2>
@@ -204,7 +206,7 @@
 
 
   <div class="fcard" onclick="window.location.href='https://www.epa.gov/safepestcontrol/integrated-pest-management-ipm-principles';">
-    <img class="agrblg" src="/images/pest.jpg">
+    <img class="agrblg" src="./images/pest.jpg">
     <div class="article">
       <a href="">Techniques</a>
       <h2>Integrated Pest Management</h2>
@@ -220,7 +222,7 @@
 
 
   <div class="fcard" onclick="window.location.href='https://eos.com/blog/agricultural-technology/#:~:text=Agricultural%20technology%2C%20also%20known%20as,%2C%20mobile%20devices%2C%20and%20software.';">
-    <img class="agrblg" src="/images/farmtech.png">
+    <img class="agrblg" src="./images/farmtech.png">
     <div class="article">
       <a href="">Blog</a>
       <h2>Farming Technology</h2>
@@ -236,7 +238,7 @@
 
 
   <div class="fcard" onclick="window.location.href='https://www.britannica.com/money/agricultural-economics';">
-    <img class="agrblg" src="/images/econ.jpg">
+    <img class="agrblg" src="./images/econ.jpg">
     <div class="article">
       <a href="">Blog</a>
       <h2>Farming Economics</h2>
@@ -253,7 +255,7 @@
 
  
   <div class="fcard" onclick="window.location.href= 'https://icar.org.in/sites/default/files/inline-files/livestock-management-AR-2011-12_2.pdf';">
-    <img class="agrblg" src="/images/livestocks.jpg">
+    <img class="agrblg" src="./images/livestocks.jpg">
     <div class="article">
       <a href="">Blog</a>
       <h2>Livestock Management</h2>
@@ -271,7 +273,7 @@
 
    
   <div class="fcard" onclick="window.location.href= 'https://nationalaglawcenter.org/overview/agritourism/';">
-    <img class="agrblg" src="/images/aritourism.png">
+    <img class="agrblg" src="./images/aritourism.png">
     <div class="article">
       <a href="">Blog</a>
       <h2>Agri-Tourism</h2>
@@ -282,8 +284,10 @@
            <li class="time"><p class="tim">11 minutes ago</p></li>
           </ul>
         </div>
-
+    </div>    
   </div>
+
+
 
 
 </section>
