--- a/index.html
+++ b/index.html
@@ -429,30 +429,34 @@
   <div class="footer-grid">
     <div class="footer-title">
       <h2>AgriLearnNetwork</h2>
-    </div>
-    <div class="footer-icons">
-      <p><b>Follow us on our socials:</b></p>
-      <div class="socialIcons">
-        <a href="mailto:AgriLearnNetwork@gmail.com" class="email-link" data-tooltip="AgriLearnNetwork@gmail.com"><i class="fas fa-envelope"></i></a>
-        <a href="https://www.instagram.com/your_username_here" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://twitter.com/your_username_here" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-        <a href="https://www.facebook.com/your_page_or_profile_here" target="_blank"><i class="fab fa-facebook"></i></a>
+      <div class="footer-iconTop">
+        <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
       </div>
     </div>
-    <div class="footer-iconTop">
-      <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+    <div class="footer-alignment">
+      <div class="footer-icons">
+        <p><b>Follow us on our socials:</b></p>
+        <div class="socialIcons">
+         <div> <a href="mailto:AgriLearnNetwork@gmail.com" class="email-link" data-tooltip="AgriLearnNetwork@gmail.com"><i class="fas fa-envelope"></i></a><h3>Email</h3></div>
+         <div><a href="https://www.instagram.com/your_username_here" target="_blank"><i class="fab fa-instagram"></i></a><h3>Instagram</h3></div> 
+         <div><a href="https://twitter.com/your_username_here" target="_blank"><i class="fa-brands fa-x-twitter"></i></a><h3>Twitter</h3></div> 
+         <div><a href="https://www.facebook.com/your_page_or_profile_here" target="_blank"><i class="fab fa-facebook"></i></a><h3>Facebook</h3></div> 
+        </div>
+      </div>
+      <div class="quick-links">
+        <h2>Quick Links</h2>
+        <ul>
+          <li><a href="#home"><p>Home</p></a></li>
+          <li><a href="#about"><p>About Us</p></a></li>
+          <li><a href="#Farm Management"><p>Blogs</p></a></li>
+          <li><a href="#Resource Library"><p>Resource Library</p></a></li>
+          <li><a href="#contact"><p>Contact Us</p></a></li>
+        </ul>
+      </div>
     </div>
-  </div>
-  <div class="quick-links">
-    <h2>Quick Links</h2>
-    <ul>
-      <li><a href="#home"><p>Home</p></a></li>
-      <li><a href="#about"><p>About Us</p></a></li>
-      <li><a href="#Farm Management"><p>Blogs</p></a></li>
-      <li><a href="#Resource Library"><p>Resource Library</p></a></li>
-      <li><a href="#contact"><p>Contact Us</p></a></li>
-    </ul>
-  </div>
+ 
+    </div>
+    
   <div class="footer-text footer-right">
     <p style="font-weight: 600; font-size: 15px;">Copyright &copy; <script>document.write(new Date().getFullYear())</script> by AgriLearnNetwork | All Rights Reserved.</p>
   </div>
