--- a/blogpage.html
+++ b/blogpage.html
@@ -10,8 +10,16 @@
   </head>
   <body>
 
-  
-      <h2 class="heading">Agro<span>Blogs</span></h2>
+      <div class="heading">
+        <div class="navoptions">
+          <a href="/index.html">Back to Home</a>
+        </div> 
+        <div class="navtitle">
+          <h2>Agro<span>Blogs</span></h2>
+    </div>
+        </div>
+        
+    
 
     <section class="farm">
         <br>
