--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
       
       <a href="#home" class="active"><i class="fa-solid fa-house"></i> Home</a>
       <a href="#about"><i class="fa-solid fa-circle-info"></i>  About</a>
+      <a href="registration.php"><i class="fa-regular fa-user"></i> Login</a>
+
       <a href="#Farm Management"> <i class="fa-solid fa-blog"></i>  Blogs</a>
       <a href="#Resource Library"><i class="fa-solid fa-book"></i>  Resource Library</a>
       <a href="#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
