--- a/resource-library.html
+++ b/resource-library.html
@@ -29,10 +29,10 @@
         <i class='bx bx-menu' id="menu-icon"></i>
         <nav class="navbar">
           
-          <a href="/#home" class="active"><i class="fa-solid fa-house"></i> Home</a>
+          <a href="/#home" ><i class="fa-solid fa-house"></i> Home</a>
           <a href="/#about"><i class="fa-solid fa-circle-info"></i>  About</a>
           <a href="/#Farm Management"> <i class="fa-solid fa-blog"></i>  Blogs</a>
-          <a href="/#Resource Library"><i class="fa-solid fa-book"></i>  Resource Library</a>
+          <a href="/#Resource Library" class="active"><i class="fa-solid fa-book"></i>  Resource Library</a>
           <a href="/#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
     
         </nav>
