--- a/index.html
+++ b/index.html
@@ -50,20 +50,24 @@
 
       <i class="bx bx-menu" id="menu-icon"></i>
       <nav class="navbar">
-        <a href="#home" class="active"
-          ><i class="fa-solid fa-house"></i> Home</a
-        >
+        <a href="#home" class="active"><i class="fa-solid fa-house"></i> Home</a>
         <a href="#about"><i class="fa-solid fa-circle-info"></i> About</a>
-        <a href="blogpage.html" target="_self">
-          <i class="fa-solid fa-blog"></i> Blogs</a
-        >
-        <a href="#Resource Library"
-          ><i class="fa-solid fa-book"></i> Resource Library</a
-        >
-        <a href="#contact" id="nav--contact"
-          ><i class="fa-solid fa-phone"></i> Contact</a
-        >
-      </nav>
+        <a href="blogpage.html" target="_self"><i class="fa-solid fa-blog"></i> Blogs</a>
+        <a href="#Resource Library"><i class="fa-solid fa-book"></i> Resource Library</a>
+        <a href="#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
+    </nav>
+       <li class="nav-item px-3" style="width: 20px;">
+        <div id="google_element"></div>
+    </li>
+    
+    <script src="http://translate.google.com/translate_a/element.js?cb=loadGoogleTranslate"></script>
+    <script>
+        function loadGoogleTranslate() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'en'
+            }, 'google_element');
+        }
+    </script>
     </header>
 
     <section class="home" id="home">
