--- a/index.html
+++ b/index.html
@@ -5,36 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AgriLearnNetwork</title>
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <link rel="icon" href="images/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" type="text/css" href="./style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    />
-    <script
-      src="https://kit.fontawesome.com/b08b6de27e.js"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    <script src="https://kit.fontawesome.com/b08b6de27e.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
-
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7972082263222296"
-      crossorigin="anonymous"
-    ></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7972082263222296" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <!-- <link rel="icon" href="./agriculture-icon-png-2804.png" type="'image/png"> -->
+    <script src="https://unpkg.com/framer-motion/dist/framer-motion.umd.js"></script>
   </head>
 
   <body>
@@ -50,19 +30,11 @@
 
       <i class="bx bx-menu" id="menu-icon"></i>
       <nav class="navbar">
-        <a href="#home" class="active"
-          ><i class="fa-solid fa-house"></i> Home</a
-        >
+        <a href="#home" class="active"><i class="fa-solid fa-house"></i> Home</a>
         <a href="#about"><i class="fa-solid fa-circle-info"></i> About</a>
-        <a href="blogpage.html" target="_self">
-          <i class="fa-solid fa-blog"></i> Blogs</a
-        >
-        <a href="#Resource Library"
-          ><i class="fa-solid fa-book"></i> Resource Library</a
-        >
-        <a href="#contact" id="nav--contact"
-          ><i class="fa-solid fa-phone"></i> Contact</a
-        >
+        <a href="blogpage.html" target="_self"><i class="fa-solid fa-blog"></i> Blogs</a>
+        <a href="#Resource Library"><i class="fa-solid fa-book"></i> Resource Library</a>
+        <a href="#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
       </nav>
     </header>
 
@@ -497,5 +469,27 @@
         header.classList.toggle("sticky", window.scrollY >10)
       })
     </script>
-  </body>
+<script>
+  const { animate } = window.framerMotion;
+
+  function smoothScroll(target) {
+    const element = document.querySelector(target);
+    const offsetTop = element.offsetTop;
+
+    animate.scrollTop(document.documentElement, {
+      to: offsetTop,
+      duration: 1.5, // Duration in seconds
+      ease: "easeInOut",
+    });
+  }
+
+  document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    anchor.addEventListener('click', function (e) {
+      e.preventDefault();
+      smoothScroll(this.getAttribute('href'));
+    });
+  });
+</script>  
+
+</body>
 </html>
