--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
   </head>
 
   <body>
+    <div id="loader-wrapper">
+      <div id="loader"></div>
+      <div class="loader-section section-left"></div>
+      <div class="loader-section section-right"></div>
+  </div>
     <header class="header">
       <img
         src="images/favicon.png"
