--- a/faqs.html
+++ b/faqs.html
@@ -7,7 +7,14 @@
     </head>
 <body>
     <div class="agri-learn-faq-button-container">
-        <a href="index.html"><button class="agri-learn-faq-button">Back</button></a>
+             <div class="agri-learn-faq-nav-item">
+              <a href="index.html">
+                <svg class="agri-learn-faq-icon-image" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg>
+             </a>
+             </div> 
+             <div class="agri-learn-faq-nav-heading">
+                <h2>Agro<span>FAQ's</span></h2>
+             </div>
     </div>
     <div class="agri-learn-faq-top-section">
         <div>
