--- a/index.html
+++ b/index.html
@@ -402,6 +402,9 @@
           <li>
             <a href="#contact"><p>Contact Us</p></a>
           </li>
+          <li>
+            <a href="faqs.html"><p>FAQ's</p></a>
+          </li>
         </ul>
       </div>
       <div class="footer-text footer-right">
